| Summary: | ASTERISK-25346: chan_sip: Overwriting answered elsewhere hangup cause on call pickup | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2015-08-26 05:41:40 | Date Closed: | 2015-08-26 14:30:02 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 11.19.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | On a call pickup the chan_sip module sets the hangup cause of the channel that was called to "normal clearing". Unfortunately the underlying call pickup code sets the hangup cause originally to "answered elsewhere". By overwriting the value no "answered elsewhere" reason is sent in the resulting CANCEL, causing some phones to show a missed call when they shouldn't. | ||
| Comments: | |||